Updating examples and READMEs